user data displayed

--- a/views/datatable.ejs
+++ b/views/datatable.ejs
@@ -123,7 +123,7 @@
 
 <div>
     <nav>
-        <a href="/" class="button button1"><span class="sp">Index -></span></a>
+        <a href="/" class="button button1"><span class="sp">Index</span></a>
     </nav>
 </div>
 
